timetable: fix too large box

--- a/widgets/timetable/timetable.scss
+++ b/widgets/timetable/timetable.scss
@@ -55,8 +55,8 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   }
 
   .location {
-    width:200px;
-    max-width:200px;
+    width:160px;
+    max-width:160px;
     text-transform: capitalize;
   }
 
